2006-11-13  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: fix FAM_WIDTH

2006-11-12  Don Allingham  <don@gramps-project.org>
	* src/Viewmanager.py: prompt before abandoning changes; enable autobackup
	* src/GrampsCfg.py: enable autobackup
	* src/Config/_GrampsConfigKeys.py: enable autobackup
	* data/gramps.schemas: enable autobackup
	* src/GrampsDb/_WriteGedcom.py: RepoRefs don't have a privacy flag

2006-11-11  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: add saving of family editor size, disabling of
	defaulting to last viwe
	* src/Editors/_EditFamily.py: add saving of family editor size 
	* src/DisplayTabs/_GalleryTab.py: Catch possible exception
	* src/glade/gramps.glade: add saving of family editor size 
	* src/DbLoader.py: Display error message on RUNRECOVERY error
	* src/ViewManager.py: allow disabling of defaulting to last view
	* src/GrampsCfg.py: allow disabling of defaulting to last view
	* src/ViewManager.py: allow disabling of defaulting to last view
	* data/gramps.schemas.in: allow disabling of defaulting to last view
	
2006-11-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* test/GrampsDb/GrampsDbTestBase.py: Provide a callback to db.load().
	Hmmm, that worked without sometime back.

2006-11-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py (get_event_cursor): Remove extra
	definition.

2006-11-10  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_AddrEmbedList.py: make labels more consistent (#513)
	* src/GrampsDb/_ReadGedcom.py: handle GedcomError properly
	* src/DisplayModels/_BaseModel.py: handle add properly with filters

2006-11-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Start parsing titles of a person
	* src/DataViews/_PedigreeView.py,
	* src/DataViews/_RelationView.py,
	* src/DisplayModels/_PeopleModel.py: Only show fallbacks for birth
	and death if role=primary
	* src/Filters/Rules/Person/_HasBirth.py,