@@ -1,3 +1,7 @@
+2006-11-13  Brian Matherly  <brian@gramps-project.org>
+	* src/plugins/DetAncestralReport.py: Add family Events
+	* src/plugins/DetDescendantReport.py: Add family Events
+
 2006-11-13  Don Allingham  <don@gramps-project.org>
 	* src/Editors/_EditFamily.py: fix FAM_WIDTH
 
